Simple-Changes-clouds

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   </head>
   <body>
     <div class="view-game">
+      <!-- <div class="score">0</div>
+      <div class="startScreen">Pressione espaço para começar</div> -->
       <img src="./images/clouds.png" class="clouds" alt="Nuvens" />
       <img src="./images/mario.gif" class="mario" alt="Personagem Mario Bross" />
       <img src="./images/pipe.png" class="pipe" alt="Cano verde do jogo do Mario" />
